# ChangeLog for net-ftp/tftp-hpa
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-ftp/tftp-hpa/ChangeLog,v 1.73 2013/12/22 12:45:34 ago Exp $

  22 Dec 2013; Agostino Sarubbo <ago@gentoo.org> tftp-hpa-5.2-r1.ebuild:
  Stable for ppc64, wrt bug #486300

  21 Dec 2013; Agostino Sarubbo <ago@gentoo.org> tftp-hpa-5.2-r1.ebuild:
  Stable for ppc, wrt bug #486300

  17 Dec 2013; Raúl Porcel <armin76@gentoo.org> tftp-hpa-5.2-r1.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #486300

  01 Nov 2013; Agostino Sarubbo <ago@gentoo.org> tftp-hpa-5.2-r1.ebuild:
  Stable for x86, wrt bug #486300

  19 Oct 2013; Pacho Ramos <pacho@gentoo.org> tftp-hpa-5.2-r1.ebuild:
  amd64 stable, bug #486300

  18 Oct 2013; Markus Meier <maekke@gentoo.org> tftp-hpa-5.2-r1.ebuild:
  arm stable, bug #486300

  17 Oct 2013; Jeroen Roovers <jer@gentoo.org> tftp-hpa-5.2-r1.ebuild:
  Stable for HPPA (bug #486300).

*tftp-hpa-5.2-r1 (14 Sep 2013)

  14 Sep 2013; Pacho Ramos <pacho@gentoo.org> +files/tftp.service,
  +files/tftp.socket, +tftp-hpa-5.2-r1.ebuild:
  Install unit file (#482712)

  15 Sep 2012; Raúl Porcel <armin76@gentoo.org> tftp-hpa-5.2.ebuild:
  alpha/ia64/s390/sh/sparc/x86 stable wrt #429164

  13 Sep 2012; Jeroen Roovers <jer@gentoo.org> tftp-hpa-5.2.ebuild:
  Stable for HPPA (bug #429164).

  12 Sep 2012; Anthony G. Basile <blueness@gentoo.org> tftp-hpa-5.2.ebuild:
  stable arm, bug #429164

  12 Sep 2012; Anthony G. Basile <blueness@gentoo.org> tftp-hpa-5.2.ebuild:
  stable ppc ppc64, bug #429164

  08 Sep 2012; Agostino Sarubbo <ago@gentoo.org> tftp-hpa-5.2.ebuild:
  Stable for amd64, wrt bug #429164

  13 May 2012; <swift@gentoo.org> tftp-hpa-0.49-r1.ebuild, tftp-hpa-5.0.ebuild,
  tftp-hpa-5.1.ebuild, tftp-hpa-5.2.ebuild:
  SELinux policy module for TFTP is provided by selinux-tftp

  02 May 2012; Fabian Groffen <grobian@gentoo.org> tftp-hpa-5.2.ebuild:
  Fixed for Prefix, marked ~ppc-macos
