@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX in.tftpd.confd-0.44 576 SHA256 55e67f871f070db2b7fa1428dabf55777ca87fecdbba7fa3b03e63c63734f977 SHA512 2aa2f69a6cc86cd0b0ac9dd3c06bb271e3085eb5d44b74edf1b33a9723ba172b0cd0aa92dc0224de52e0572deb9f855e725ed076d8f57c86b509b2fbc03f5075 WHIRLPOOL 583852aea654171bc74d8fd431ef93ddca6d818285a4864b7e6a2fbc6a53c1f71452bcc9eaecfde5165c567430d7c6af05aaed52ade40492315e78a4c479731d
 AUX in.tftpd.rc6 443 SHA256 3bceb3446bbebfae60d5276a2481c4311270d2e33c46e73a8bea66e330244ae0 SHA512 3efbb4044da000180855fa4cd49b3886f67fb36b8b42a5d5c9bcb278b2ebab9b3771c9ea4e44716fd6233dc5c62e6173fc0e429b892c65b798c0a8dfc69313dc WHIRLPOOL be33498f9e91d5f2723ea1a5a4b5ff296fb2368c8b5a7c8b76a4347aaf1fafaea980b1be8e8389769edabb5d3828495e59ee36b7414ce56bcd361264528e69e2
@@ -7,30 +7,30 @@ AUX tftp.service 119 SHA256 a3eea8222b6e1f6a5ee9548635f1702ab7ef20db7537c270568d
 AUX tftp.socket 112 SHA256 7cf8fd4d11d478436f99ca5e16ab6fe985208d52609874ee1f617a180c4e028f SHA512 d49cdbb7e265aa98d989f8ae96e2c80bfd5887ae0efc6bfcd726d5fa4d83ffc480f5f374e30b8564b05d9690eb2a0c0ed0077982a74946edfbce5d19066d0564 WHIRLPOOL 4b05a93b25f88b8cf7438f5fad94b73b51e59fa2c877cf19b7fee0342b8c2e93ea6c3e7a492b1ef69f4ee4a88b10e544dbc9d9134d0849678c075d474dcb7e7c
 AUX tftp.xinetd 219 SHA256 044c1c262cbeddbcddf449a694c5c472cc236aba87ea89b5a4dc7a76a1bf90a5 SHA512 26883a4feffe8f66fe2c21c05892beeb93fa4511ca5ce18e92273badd4b93afefb0d9cef48e07503037ca37b2ff0cdb24d35e5c24d2e32d8027a5e74c49426f5 WHIRLPOOL 43a0883338b74f18b63afde21e881932e83017aa47f28240f33eed25426705ac7d545b7220245c2a47785c53d4ebc23ce171667ccbabc7e8d94ff7ff8ea82407
 DIST tftp-hpa-0.49.tar.bz2 91829 SHA256 9055064ea0aea223e82e99cbdead970dc46fa9456c91a7b3d6c0b37b62b6dd8c SHA512 a300c5a7c2df3f3540c4bfcec3e81b6f51ab06675b74369d951fc2cc3aca1c4b56a46e19627770a0b5bf2c7b8575d0dd45fbd63975472931a9bcd18e55783507 WHIRLPOOL 3517aef879c6bb1a2175c0fb2f0b245e5d19d2373897bc5abd6c1fa37540f09f80460f10559a22ed725de1336a4a8ab5159580229a20d5a58fb07f85e2d9402d
-DIST tftp-hpa-5.0.tar.bz2 93039 SHA256 96309871519efcab829fdfcc1cca546d772ed6a0e214c9e99e77ca7aea29f734
-DIST tftp-hpa-5.1.tar.xz 89288 SHA256 f736417a4d436512168ec34fe0ed13845388a3f01b862baa50b7b427e7ab5e42
+DIST tftp-hpa-5.0.tar.bz2 93039 SHA256 96309871519efcab829fdfcc1cca546d772ed6a0e214c9e99e77ca7aea29f734 SHA512 75f70d0e83fdcfd2dcdc51ac17a49d5d63ddc88aa72776c9df9c169d1071fcb33dd093398279714910e2f195e250babd174599e4e4ad1accb0418071980a644f WHIRLPOOL 88c5a4de433891f4b19fd72d851998cba1d4fbe300b595921ae92de12ef4a0f2043a55dcc34462b6a11630ebd044b5494144b5d3e01a926999df7352ea6f2b94
+DIST tftp-hpa-5.1.tar.xz 89288 SHA256 f736417a4d436512168ec34fe0ed13845388a3f01b862baa50b7b427e7ab5e42 SHA512 2b027b98f26477eb78949225eab016bf7f6f7120765650797ea85c27b42373f72af100a685d1e9d32eaa39f925a6584cf6fd6be2e1a2ab60d627e6dc7dbe4081 WHIRLPOOL 9694f49856afbef83e834ed06336f07a2fb03097421503b79ab98c822007dc09c31ddde324431a6483f8a24623390d464122b8953065dceb120979beef59d677
 DIST tftp-hpa-5.2.tar.xz 89564 SHA256 afee361df96a2f88344e191f6a25480fd714e1d28d176c3f10cc43fa206b718b SHA512 a5198e923a6e58281f749dc77b3f3ed8579e56b6f0fd6a17482cc88bdc8d34b6702c7c709717885b9b937ecae459d9a832328a49a2e3536dc7432cdb39d2a394 WHIRLPOOL 43fc1db9e4e88266e280402a4d499da5e22632624e1c3ad868f15cf55b5f6c6557662cd8a6739bea89b608cf5c8917ef5c7ce6d6fb16164458ac6f4cc67e2c19
 EBUILD tftp-hpa-0.49-r1.ebuild 1261 SHA256 de05b0f5149324c2f4f25521b1b811fee64734b080a4c17b60c1bdfee659603a SHA512 b77acc8c566570a0ed99af7cc20a11014d12f4c296cfa8c1f1faf7c2f1ac46ac962389d12f2343efc1ed50a42c5abdd491e7f53c181e7a81191bdefacc6431a4 WHIRLPOOL 771b6e5c9f2f28bc7dca256a62aa05dcbef6c5ead439ada683ed1e1f70c7f15e9a606a80512aff204aff834e5bc902d6042195b991c9b4a062063db63ffea16d
 EBUILD tftp-hpa-5.0.ebuild 1172 SHA256 599bdb601356ded7f415de8a7569c10677179eadf7df0589c7e59ac3313f2d3a SHA512 80277b16d9bed9960dba726beb3a61d578eae328ef24fa31c0f1dd7cc2fdda3dfd333b3c92c07282b585b1781bd3000b3a2fcfcdbf3ed8b46355698709d53a8e WHIRLPOOL 906763468dec740ac67cf12dc5f543394576f2dbb7853d9a15372f209e0211bd48067aa8b3a19715a0c63151db379f8b500047f5c58e6bd1acda8f57633bd3ca
 EBUILD tftp-hpa-5.1.ebuild 1261 SHA256 56e70983dae8e8792850a2e354f358dceb84251e36d9683e99c02b59949a5b03 SHA512 9612a4a74f12dc9a89c18fe7f1dcdbb7bda2bbc741bd1904fa23e78d69e7aa11451d85d7c76aaacbd82d03b009c9c9f941e5ac338d66a39d054e2da9f0d69dc4 WHIRLPOOL 2185178fb361cf0d289457540ec6d1c3c57a8f13e43f9628095fca51eac01bb1f8472bb7705c551010d39d97091d3b634ec844868039427683150acb134d67fe
-EBUILD tftp-hpa-5.2-r1.ebuild 1385 SHA256 edd56e8216c195214d45905125bea87718927c0c1a43b6202eb9f0f42d12e1ce SHA512 c29e7157f2b0133da77d707aa343576da6d360df90c099d94a7f3464364ab8838d67371786cc396b98b9ae9993bf93b1bc14b60213ca8bca6270964325f5b95d WHIRLPOOL 0d0e07970dc07af535e4fed5470cea7c897b6a19f04c621d46a8ada5af5cf432bafa99eddac71e64e1b64b871f3247e9ac9d33a0609f19ac374f06aaa4707519
+EBUILD tftp-hpa-5.2-r1.ebuild 1409 SHA256 e2d4bdc5c07d77d93070f396ff23abe27f710394f02e266a14388e1d5cbd970c SHA512 938a18c648092a154bc6cf74fd3ac77b381396b77cee2ae143ae31f9a9b7fe3e88f5d0d694b72ea376ebe64abc103fca2a9ff00c509df192dd6a30d0e55daf30 WHIRLPOOL a06530b29f9f99f4877b02c0a3d1550efa601e920a8c9ead02844ed35b3fbb6ed5871725465811ba8778a2695031aa2c446b2ef5b18bfad1b724fcf952f01f17
 EBUILD tftp-hpa-5.2.ebuild 1274 SHA256 7d9327d0eb3256dc49503bfdf9c41663a2c045869b61a3ca39af0ae5a3ff0c0d SHA512 9f4b680e13590e684588aedd89cc98c223dba2138978896e1596dcd955e5486310cc982d7195350b7953298ffb47ce28995f3e130b98ffafb0a5aee4e852ec2b WHIRLPOOL 21576388e65fd75cf76267d8678eedc58a0e4e5f1c86cfbdcf00165246e36213f9cc8ad5a2cd4d032352b53f943de5f6f88cd92cd1f8a352b00c4472fef35539
-MISC ChangeLog 11737 SHA256 a91bc90a2316deb7af632a0f91495fedfb6674537af36ec77fca74176c8bb071 SHA512 b460771bb05b0d2317399acbb56a263ebc15c2b4e2f2518f790a8359801bae978366942f63e9a12bb73b1eb19395a24bd0d29cbff50aaefde436275c167c2410 WHIRLPOOL 5ebcb92f551de4902bbf4c6dfa941d57a7b1e0c14a3c192d8abd205bc23a623c24ed301ea78ca5fffdd6a6bfa1620d519ffa184e8579bcf18792af5599fd45cf
+MISC ChangeLog 11858 SHA256 8637fe9bdad236a2b220773ebbeac56feb31f38652bd9f82aff1436b436f024e SHA512 05f8db82f97d9e58abf1ecc79968976907f55e683152ce17728c89eeeff358aa3723cf289ccf883e7970906718889fda8533adabb20977d221ca655e14b781db WHIRLPOOL 108ca9c8f7a07900d38e22ab5f3b4d77995ea1ef1d6d559fbe580123df3e8d99dc6f769bbbf022d72a808bb839fdc4bbfc616f4eaf8ab2548fbad079e0587baa
 MISC metadata.xml 164 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 SHA512 8eb0d5153d388f6ea069c64b93882244816a0a09aecc0d73cb872121ce0eb24c5ccafa96aad0b620b2300f319e1af101fa7fa6c5d0d561719d49bb07da0a2eca WHIRLPOOL 11a1441bddb7a6c69653c663902b7da5767ae6ad515ac2aabfc42fe37927a1ccc21472deeee454009ff720201a41c3e4a912df42661a0a87150fb46126da2d52
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCgAGBQJStt39AAoJELp701BxlEWfFGwQALUUEC/lN2ghpLOekZEq9Cek
-vNl+PCscXVIJn1A543idbFvbskQwrYZG9v98qAoCJdJqN4GV6aHT7Pl2EnfGBW3z
-zvBqUjmGj1MELB4u3v+Z2cImgn7qlNsoA+AXyG1LlOZwXDTU8xSKs5l9IH0lfdIf
-hAmPqFOsyKX0s7Iqd3zJb5bGD8igmtC+Ol/+awJeJk7tPhWbFSlaWBDlT8e+P5XV
-5rh2g8aSj4kI4hIM9i52nPAholTnEescN8/fs5OJDaTjNpIFWpA1GbiuwpbvMhr3
-wkTDR1iLKB8ipykbnlWwm42JQfI9snARM/FqMCv/QbOrlc17lYN3sAfjUNgc+DiX
-+FOwopg5YNrC2jFfYNST2D11OhJSa7YRgf3TJIBNrNAu262LR5g7BY9sLoe4JaoB
-7RXI0V8AS5hBtWh1UoThwZjFgOEQuudWlkPgeok5xHRD/yMUZBdfQZ9qhcCWGHb1
-EtUWoLfSZw5Mj8m/MqHzCOY0LDXCl+Pug+AxmR5x8X02QKZZBbWbhrpXzgKapmj5
-HBXx/NJyioMbYQXbvZ1JmWeF4gwheTi9y29eqA5JMCkayk2wrsm33qpaDEyGCpKb
-dDB/3pvxRkee9uSu72LM2kaVy65vetCwPjVISQc6CSHxGFK7xhtJSl7SynqqkdhM
-xSrKyA3TGcxmVkiyq1sJ
-=QoaX
+iQIcBAEBCAAGBQJTHMySAAoJEPGu1DbS6WIAFRMP/0OPPdtvNf0S3w+wlwiLhcyn
+zZa6VmVz6kxLi9KOsN0RF9jaSbRiMp3kh4bUxWMWXG/gAmIopUze+mE5YNAnxOP/
+mW+Fu7SsbXZEN3Oj2yzUxE9rXwQQRExTWRdyLzi/PrprZxrm8mVHU6RmNFUU8W52
+vCEvcZswWirIBgk3ADCBZ0jj0ZbOUpebwR7biTgaV7nVO1kE3Bpppaxis7iWa9Qe
+MAerMjXWCOg3rQ6XBOpCRUkd83ftTALj2HbkGvvLFf5eG3pXhpuXRUwkC49AAxib
+WcbUkFMNnvNHimzp503PC7HVf3cx1sa8gQ0tLgTOsEpYh7KIxS6lI3XUjgOyij0d
+/hQTcmK+EeWQhIXjSd5uWgwzoe9NLpeEEZEBrq1wH13c6uJy7TgQuwJgGG97rVZ2
+6fimtAdnCkNulkk+ZrjZg1TgyDH/F0scYo8j2jS8L+0v/N1vWZ/dAbhicHbpjBEh
+O5PO6Z7IBqWi2FB4t/0SoqqWpPHF4f98r5wmhg4fPfvE0FRkl259ki7wOCoMolvv
+hucOOPXJjfF1X9z0Zyj8JRZOFBCM6kCIlxe0etvljd54dApufP8Ny0H69Nv03rzq
+zf3I2Iy4vvySPtBrlWOPn2qEsE5tMXVECCw4m2/uT4r05xfwS0mwE715HXP8NckQ
+1OgfCysK78UEM0mM6xs5
+=4zLg
 -----END PGP SIGNATURE-----
