@@ -1,6 +1,9 @@
 # ChangeLog for net-ftp/tftp-hpa
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-ftp/tftp-hpa/ChangeLog,v 1.73 2013/12/22 12:45:34 ago Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-ftp/tftp-hpa/ChangeLog,v 1.74 2014/03/09 20:18:21 vapier Exp $
+
+  09 Mar 2014; Mike Frysinger <vapier@gentoo.org> tftp-hpa-5.2-r1.ebuild:
+  Add epatch_user #503826 by Sergey Popov.
 
   22 Dec 2013; Agostino Sarubbo <ago@gentoo.org> tftp-hpa-5.2-r1.ebuild:
   Stable for ppc64, wrt bug #486300
